# ChangeLog for net-misc/tinc
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/tinc/ChangeLog,v 1.12 2007/04/07 13:38:28 opfer Exp $

  07 Apr 2007; Christian Faulhammer <opfer@gentoo.org> tinc-1.0.5.ebuild:
  keyworded ~amd64, bug 171550

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*tinc-1.0.5 (16 Dec 2006)

  16 Dec 2006; Daniel Black <dragonheart@gentoo.org> +tinc-1.0.5.ebuild:
  version bump.

  24 May 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove warpzero from metadata.xml, bug 133117.

*tinc-1.0.4 (25 Apr 2006)

  25 Apr 2006; Daniel Black <dragonheart@gentoo.org>
  +files/tinc-1.0.4-lzo2.patch, metadata.xml, -tinc-1.0.2.ebuild,
  +tinc-1.0.4.ebuild:
  version bump bug #112375. added me to maintainer too. removed old version

  03 Jan 2006; Daniel Black <dragonheart@gentoo.org> tinc-1.0.2.ebuild,
  tinc-1.0.3.ebuild:
  dependency changed to =dev-libs/lzo-1* so that unmasking lzo-2 wont break this
  package as per bug #112375

*tinc-1.0.3 (29 Apr 2005)

  29 Apr 2005: Joshua Charles Campbell <warpzero@gentoo.org> tinc-1.0.3.ebuild:
   Bumpity bump bump.

  26 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> tinc-1.0.2.ebuild:
  Added to ~ppc.

  24 Dec 2003; Sven Blumenstein <bazik@gentoo.org> tinc-1.0.2.ebuild,
  files/tincd:
  Fixed init script and added ~sparc keyword.

*tinc-1.0.2 (03 Aug 2003)

  24 Dec 2003; <warpzero@gentoo.org> metadata.xml, tinc-1.0.2.ebuild:
   Added initial ChangeLog which should be updated whenever the package is
   updated in any way. This changelog is targetted to users. This means that the
   comments should well explained and written in clean English. The details about
   writing correct changelogs are explained in the skel.ChangeLog file which you
   can find in the root directory of the portage repository.
	   