@@ -1,16 +1,21 @@
-AUX tincd 1363 RMD160 3b3e36194210bbad8556c70f0735c9d59a96d2c4 SHA1 5eb314b870aa775954eaf34664fc5015d59bd3b0 SHA256 081fb95789eed4c1132b7604af3c63151b86c58686cfe18cc116b47ac48f0b55
-MD5 2b68a3da6eb0263c04e02435ca679f1b files/tincd 1363
-RMD160 3b3e36194210bbad8556c70f0735c9d59a96d2c4 files/tincd 1363
-SHA256 081fb95789eed4c1132b7604af3c63151b86c58686cfe18cc116b47ac48f0b55 files/tincd 1363
+AUX tincd 1598 RMD160 5ddecbbaccbb28cdb595db5439fb63192ee1b61e SHA1 4fa03b0898736cdadccab946cf329bc422c75e19 SHA256 520acccd0bb7ab37d966d5dc453050829dedd35ff857558814443b22527f0be8
+MD5 9d6be41a86a51d3f1c94ec258b236566 files/tincd 1598
+RMD160 5ddecbbaccbb28cdb595db5439fb63192ee1b61e files/tincd 1598
+SHA256 520acccd0bb7ab37d966d5dc453050829dedd35ff857558814443b22527f0be8 files/tincd 1598
 DIST tinc-1.0.5.tar.gz 490292 RMD160 fd5965153b1a5c9c6d200c257bc885679c36b174 SHA1 32f85bc58ce2c45351d312e7baee40f382e44edd SHA256 6069e560ea114d62b300282a21a515bccc4fb85db6e5694dabb1642067ea051e
-EBUILD tinc-1.0.5.ebuild 984 RMD160 f4be3a8e13c99fd3b59d67794a513ec2500b9f8c SHA1 d559afc4fd365f69a22e57add187ce19f361a3d4 SHA256 fbb117f33c671e4ff666db18d8204aa017481166a2c913dab8204a488e1fa13f
-MD5 9856408a976411deb54f0aea1e4ba648 tinc-1.0.5.ebuild 984
-RMD160 f4be3a8e13c99fd3b59d67794a513ec2500b9f8c tinc-1.0.5.ebuild 984
-SHA256 fbb117f33c671e4ff666db18d8204aa017481166a2c913dab8204a488e1fa13f tinc-1.0.5.ebuild 984
-MISC ChangeLog 1915 RMD160 b390496e9b06551868c2e0cb08471a193e788297 SHA1 e7b6e46104f25b60a9ef9de46ed15e3f419ea16c SHA256 bafff35365d92aba83de5df14030b7e28f5a0182f2571ecb63fd637e0d101113
-MD5 1db769285280898155f8c4976f358f47 ChangeLog 1915
-RMD160 b390496e9b06551868c2e0cb08471a193e788297 ChangeLog 1915
-SHA256 bafff35365d92aba83de5df14030b7e28f5a0182f2571ecb63fd637e0d101113 ChangeLog 1915
+DIST tinc-1.0.7.tar.gz 499135 RMD160 74ce43f65700b182dff879ac08c41859faee27c2 SHA1 79b18aa72d5c694c2a9ee7f59c8cf274407ed908 SHA256 5993b9d2c8a2836bb2527a3c07ceb0d933e55964a4790b08743f5f7aaec25952
+EBUILD tinc-1.0.5.ebuild 963 RMD160 74e102ad4ecad498aa97248a87cef8e0aff52144 SHA1 46bd8c613af3dcdc77dfae9450caeca4a27bf7b0 SHA256 84d58d65f402b4bbe1e70f69df599b67a55c1fb951869ce52634de44ffe7348e
+MD5 11cbf787be7128e3ee961fe6b7e3f091 tinc-1.0.5.ebuild 963
+RMD160 74e102ad4ecad498aa97248a87cef8e0aff52144 tinc-1.0.5.ebuild 963
+SHA256 84d58d65f402b4bbe1e70f69df599b67a55c1fb951869ce52634de44ffe7348e tinc-1.0.5.ebuild 963
+EBUILD tinc-1.0.7.ebuild 959 RMD160 a33e80b342ed5f08a093eb00678e11741119ded3 SHA1 e37ad40fd95e10793ec940dff2f1a5861fa31f2b SHA256 038d72d8f18a6595579d180d40af74f5a3bb2d10d0379fe42df36a9c707feff9
+MD5 874497c56f946a6f7a7b642703318258 tinc-1.0.7.ebuild 959
+RMD160 a33e80b342ed5f08a093eb00678e11741119ded3 tinc-1.0.7.ebuild 959
+SHA256 038d72d8f18a6595579d180d40af74f5a3bb2d10d0379fe42df36a9c707feff9 tinc-1.0.7.ebuild 959
+MISC ChangeLog 2224 RMD160 be45a3811861d9dd8c464a3536b09f7aa2e9afab SHA1 3c698c4392aa6294f6d2241a2968b83444aa8aeb SHA256 5331153eb18231f9957efa4ab1fd1ba1c0ca00c31da077a2bb8b8990620c5f38
+MD5 c8a766dd9df1b04f8899050e6c111f93 ChangeLog 2224
+RMD160 be45a3811861d9dd8c464a3536b09f7aa2e9afab ChangeLog 2224
+SHA256 5331153eb18231f9957efa4ab1fd1ba1c0ca00c31da077a2bb8b8990620c5f38 ChangeLog 2224
 MISC metadata.xml 348 RMD160 afd2573757a4b008cba32a623a56b57f4b0dd2e1 SHA1 d5be688b2f184743d8e63b551cc1a359ec8355be SHA256 9c51cd497b519a843d983279c7cd59bf739d1c3f4d55ae94600cfecdb2ffbb5a
 MD5 cd6151a96e4193f6dc2624b058af15d5 metadata.xml 348
 RMD160 afd2573757a4b008cba32a623a56b57f4b0dd2e1 metadata.xml 348
@@ -18,3 +23,6 @@ SHA256 9c51cd497b519a843d983279c7cd59bf739d1c3f4d55ae94600cfecdb2ffbb5a metadata
 MD5 7e74a36b6019d95acbe9956bc1ac07ba files/digest-tinc-1.0.5 232
 RMD160 50288e9dde818507cb5529977d18ed77406fca61 files/digest-tinc-1.0.5 232
 SHA256 22843b93329ecc96059f510f94b490e1f93a474e9332b99798b4d9a5ab2ebc51 files/digest-tinc-1.0.5 232
+MD5 9d35c02042a57e39457322aac03a0ab0 files/digest-tinc-1.0.7 232
+RMD160 66e327f8e338aab304a66b16d05babc9c7627a25 files/digest-tinc-1.0.7 232
+SHA256 738d018f61c7aad912008d2eaa5a0c06d63a8f85598eacb77cc721a3335a088b files/digest-tinc-1.0.7 232
