@@ -1,0 +1,3 @@
+MD5 572255e6cbb9efffd9e40adb73ab7861 tinc-1.0.7.tar.gz 499135
+RMD160 74ce43f65700b182dff879ac08c41859faee27c2 tinc-1.0.7.tar.gz 499135
+SHA256 5993b9d2c8a2836bb2527a3c07ceb0d933e55964a4790b08743f5f7aaec25952 tinc-1.0.7.tar.gz 499135
