@@ -1,7 +1,9 @@
 #!/sbin/runscript
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/net-misc/tinc/files/tincd,v 1.3 2004/07/15 00:13:56 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/tinc/files/tincd,v 1.4 2007/04/19 08:45:08 dragonheart Exp $
+
+opts="reload"
 
 depend() {
 	use logger dns
@@ -9,7 +11,7 @@ depend() {
 }
 
 checkconfig() {
-	if [ ! `grep -c '^ *NETWORK:' /etc/conf.d/tinc.networks` > 0 ]
+	if ! grep -q '^ *NETWORK:' /etc/conf.d/tinc.networks 
 	then
 		eerror "No VPN networks configured in /etc/conf.d/tinc.networks"
 		return 1
@@ -20,14 +22,14 @@ start() {
 	checkconfig || return 1
 	ebegin "Starting tinc VPN networks"
 	eend 0
-	cat /etc/conf.d/tinc.networks | grep '^ *NETWORK:' | awk '{ print $2 }' | while read TINCNET
+	awk '/^ *NETWORK:/ { print $2 }' /etc/conf.d/tinc.networks | while read TINCNET
 	do
-		if [ ! -f /etc/tinc/$TINCNET/tinc.conf ] 
+		if [ ! -f /etc/tinc/"$TINCNET"/tinc.conf ] 
 		then
 			eerror "Cannot start network $TINCNET, /etc/tinc/$TINCNET/tinc.conf does not exist !"
 		else
 			ebegin "Starting tinc network $TINCNET"
-			/usr/sbin/tincd --net=$TINCNET --logfile=/var/log/tinc.$TINCNET.log --pidfile=/var/run/tinc.$TINCNET.pid
+			/usr/sbin/tincd --net="$TINCNET" --logfile=/var/log/tinc.$TINCNET.log --pidfile=/var/run/tinc.$TINCNET.pid
 			eend $?
 		fi
 	done
@@ -36,14 +38,27 @@ start() {
 stop() {
 	ebegin "Stopping tinc VPN networks"
 	eend 0
-	cat /etc/conf.d/tinc.networks | grep '^ *NETWORK:' | awk '{ print $2 }' | while read TINCNET
+	awk '^ *NETWORK:/{print $2}' /etc/conf.d/tinc.networks | while read TINCNET
 	do
-		if [ -f /var/run/tinc.$TINCNET.pid ]
+		if [ -f /var/run/tinc."$TINCNET".pid ]
 		then
 			ebegin "Stopping tinc network $TINCNET"
-			/usr/sbin/tincd --kill=9 `cat /var/run/tinc.$TINCNET.pid` --pidfile=/var/run/tinc.$TINCNET.pid
+			/usr/sbin/tincd --kill --pidfile=/var/run/tinc."$TINCNET".pid
 			eend $?
-			#rm -f /var/run/tinc.$TINCNET.pid
+		fi
+	done
+}
+
+reload() {
+	ebegin "Reloading configuration for tinc VPN networks"
+	eend 0
+	awk '^ *NETWORK:/{print $2}' /etc/conf.d/tinc.networks | while read TINCNET
+	do
+		if [ -f /var/run/tinc."$TINCNET".pid ]
+		then
+			ebegin "Reloading tinc network $TINCNET"
+			/usr/sbin/tincd --kill HUP  --pidfile=/var/run/tinc."$TINCNET".pid
+			eend $?
 		fi
 	done
 }
