@@ -1,11 +1,19 @@
 # ChangeLog for net-misc/tinc
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/tinc/ChangeLog,v 1.12 2007/04/07 13:38:28 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/tinc/ChangeLog,v 1.13 2007/04/19 08:45:08 dragonheart Exp $
+
+*tinc-1.0.7 (19 Apr 2007)
+
+  19 Apr 2007; Daniel Black <dragonheart@gentoo.org> files/tincd,
+  -tinc-1.0.3.ebuild, -tinc-1.0.4.ebuild, -files/tinc-1.0.4-lzo2.patch,
+  tinc-1.0.5.ebuild, +tinc-1.0.7.ebuild:
+  version bump. Improved initscript thanks to inspiration by Natanael Copa in
+  bug #175024
 
   07 Apr 2007; Christian Faulhammer <opfer@gentoo.org> tinc-1.0.5.ebuild:
   keyworded ~amd64, bug 171550
 
-  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
+  22 Feb 2007; Piotr JaroszyÅski <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
 
 *tinc-1.0.5 (16 Dec 2006)
@@ -13,7 +21,7 @@
   16 Dec 2006; Daniel Black <dragonheart@gentoo.org> +tinc-1.0.5.ebuild:
   version bump.
 
-  24 May 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
+  24 May 2006; Bryan Ãstergaard <kloeri@gentoo.org> metadata.xml:
   Remove warpzero from metadata.xml, bug 133117.
 
 *tinc-1.0.4 (25 Apr 2006)
